# gu-pp-py-extened

./: README.md  pyproject.toml
examples/: convert_to_tau_example.py  osu_parser_example.py  osu_std_parse_example.py  sentakki_basic_example.py  sentakki_complete_example.py  sentakki_convert_example.py  tau_complete_example.py  tau_performance_example.py
src/any/: beatmap.py  osu_parser.py  parser.py
src/any/models/: HitObject.py  TimePoint.py  others.py
src/common/: mods_base.py
src/osu_std/: __init__.py  hitobjects.py  parser.py
src/sentakki/: __init__.py  attributes.py  base.py  beatmap.py  converter.py  core.py  example.py  hold.py  mods.py  slide.py  tap.py  test_objects.py  touch.py
src/sentakki/beatmaps/: __init__.py  converter.py  flags.py  objects.py  slide_geometry.py  slide_paths.py
src/sentakki/difficulty/: beatmap_base.py  difficultyCalculator.py  sentakkiDifficultyAttributes.py
src/sentakki/performance/: __init__.py  example.py  (+3 more)
src/tau/: __init__.py  attributes.py  beatmap.py  complete_example.py  convert_example.py  convertor.py  example.py  mods.py  mods_example.py  objects.py
tau_pp_py/: README.md  example.py  pyproject.toml
tau_pp_py/src/: __init__.py  main.py
tau_pp_py/src/model/: __init__.py  beatmap.py  control_point.py  hit_object.py
tau_pp_py/src/tau/: __init__.py
tau_pp_py/src/tau/convert/: __init__.py  converter.py
tau_pp_py/src/tau/difficulty/: __init__.py  calculator.py
tau_pp_py/src/tau/performance/: __init__.py  calculator.py
tests/: test_basic_conversion.py  test_difficulty_skills_demo.py  test_pr701_strict.py  test_star_complexity_demo.py  test_tau_angle_range.py  test_tau_complexity_patterns.py  test_tau_difficulty_v2.py
(+20 files in other folders)
