[project]
name = "gu-pp-py-extended"
version = "0.1.0"
description = "PP and star calculation for more osu! rulesets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "osupyparser",
]
 
[project.optional-dependencies]
dev = [
    "pytest>=7",
    "build>=1.0.0",
    "twine>=4.0.0"
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
osupyparser = { git = "https://github.com/mingxuangame/osupyparser" }
